feat(core): allow dynamic namespace and flowId in ForEachItem